# koi-cpp

./: .gitignore  CMakeLists.txt  README.md
src/main/cpp/: koi_object.cpp  koi_object.hpp  koicore.hpp
src/main/cpp/types/: koi_boolean.cpp  koi_boolean.hpp  types.hpp
